using sqlite for get /players api
